--- a/src/service/language/words.json
+++ b/src/service/language/words.json
@@ -411,7 +411,7 @@
     },
     "80": {
         "id": 80,
-        "en": "About us",
+        "en": "Imprint",
         "de": "Impressum"
     },
     "81": {
@@ -421,7 +421,7 @@
     },
     "82": {
         "id": 82,
-        "en": "About us",
+        "en": "Imprint",
         "de": "Impressum"
     },
     "83": {
