--- a/src/service/language/words.json
+++ b/src/service/language/words.json
@@ -466,8 +466,8 @@
     },
     "91": {
         "id": 91,
-        "en": "Contracts",
-        "de": "Verträge"
+        "en": "Overview",
+        "de": "Zur Übersicht"
     },
     "92": {
         "id": 92,
